crates/core/tests/proc/fn/forbidden_fn.stderr
error: Using the name 'new' can cause conflicts in generated code.
 --> tests/proc/fn/forbidden_fn.rs:4:4
  |
4 | fn new() {}
  |    ^^^
