crates/core/tests/proc/fn/forbidden_fn.rs
use interoptopus::ffi_function;

#[ffi_function]
fn new() {}

fn main() {}
